<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ademar.exercicio5.MainActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/txtTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/codigo"
            android:text="@string/codigo" />

        <EditText
            android:id="@+id/codigo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/salarioBase"
            android:text="@string/salarioBase" />

        <EditText
            android:id="@+id/salarioBase"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
        
        <TextView
            android:id="@+id/txtTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/tempo"
            android:text="@string/tempo" />

        <EditText
            android:id="@+id/tempo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

     <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="limpar"
            android:text="@string/limpar" />
    </LinearLayout>

</FrameLayout>